--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <label> Dog Breed: <input type="text" name="dogBreed" id="dogBreed" /></label><br />
   <input type="submit" name="submit" id="submit" value="Submit" />
 </form>
+    <span>id</span>
     <script src="index.js"></script>
   </body>
 
