--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+    <form action="http://localhost:3000/dogs" method="POST">
+  <label> Dog Name: <input type="text" name="dogName" id="dogName" /></label><br />
+  <label> Dog Breed: <input type="text" name="dogBreed" id="dogBreed" /></label><br />
+  <input type="submit" name="submit" id="submit" value="Submit" />
+</form>
+    <span>id</span>
     <script src="index.js"></script>
   </body>
 
